--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.5.1"
   },
   "devDependencies": {
     "mocha": "^8.3.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "postgrator-cli": "^3.2.0"
   }
 }
