--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "test": "mocha"
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "knex": "^0.95.2",
     "morgan": "^1.10.0",
     "pg": "^8.5.1"
   },
